force-app/main/default/objects/Line_Account__c/Line_Account__c.object-meta.xml
<CustomObject>
    <label>LINE 帳號</label>
    <nameField>
        <label>LINE 官方帳號名稱</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>