force-app/main/default/objects/Line_Account__c/fields/ChannelAccessToken__c.field-meta.xml
<CustomField>
    <fullName>ChannelAccessToken__c</fullName>
    <label>Channel Access Token</label>
    <type>TextArea</type>
</CustomField>