force-app/main/default/objects/Line_Account__c/fields/ChannelId__c.field-meta.xml
<CustomField>
    <fullName>ChannelId__c</fullName>
    <label>Channel ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>