force-app/main/default/objects/Line_Account__c/fields/ChannelSecret__c.field-meta.xml
<CustomField>
    <fullName>ChannelSecret__c</fullName>
    <label>Channel Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>