force-app/main/default/objects/Line_Account__c/fields/IconUrl__c.field-meta.xml
<CustomField>
    <fullName>IconUrl__c</fullName>
    <label>Icon URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>